@@ -49,3 +49,5 @@
 2016-08-29 Fred Gleason <fredg@paravelsystems.com>
 	* Rewrote 'LoadConfig()' and 'SaveConfig()' methods to use
 	QSettings'.
+2016-09-02 Fred Gleason <fredg@paravelsystems.com>
+	* Added a 'make install-win32' target.
